--- a/cmbbot/src/package.json
+++ b/cmbbot/src/package.json
@@ -3,7 +3,8 @@
     "@slack/bolt": "^3.13.0",
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
-    "jose": "^4.14.4"
+    "jose": "^4.14.4",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
